[package]
name = "yanes"
version = "0.1.0"
authors = ["Marise Hayashi <vyatheslav2707@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
derive-getters = "0.2.0"
sdl2 = { version = "=0.34.3", features = ["bundled", "static-link"] }
