[package]
name = "yanes"
version = "0.1.0"
authors = ["Marise Hayashi <vyatheslav2707@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
lazy_static = "1.4.0"
match_all = "0.2.5"
sdl2 = { version = "=0.34.3", features = ["bundled", "static-link"] }
